[package]
name = "tile_net"
version = "2.0.5"
authors = ["Kevin Robert Stravers <kevin@stravers.net>"]
license = "GPL-3.0"
keywords = ["tile", "collision"]
documentation = "https://docs.rs/tile_net"
repository = "https://github.com/kstrafe/TileNet"
description = """
Continuous tile-based collision detection and resolution.
"""

[dependencies]
clippy = { version = "0.0", optional = true }
interleave = "1.0"

[features]
default = []
dev = ["clippy"]

[dev-dependencies]
sfml = "0.11"
